src/snapshots/pandalang__parser__tests__parses@negative.panda.snap
---
source: src/parser.rs
expression: source
input_file: src/snapshot_inputs/int/negative.panda
---
Int(
    Int {
        n: -37,
    },
)
