src/snapshots/pandalang__parser__tests__parses@nested.panda.snap
---
source: src/parser.rs
expression: source
input_file: src/snapshot_inputs/fun/nested.panda
---
Expr(
    Fun {
        arg: "x",
        body: Expr(
            Fun {
                arg: "y",
                body: Expr(
                    BinOp {
                        left: Expr(
                            Var {
                                name: "x",
                            },
                        ),
                        right: Expr(
                            Var {
                                name: "y",
                            },
                        ),
                        kind: Add,
                    },
                ),
            },
        ),
    },
)
