src/snapshots/pandalang__parser__tests__parses@parens1.panda.snap
---
source: src/parser.rs
expression: source
input_file: src/snapshot_inputs/parens/parens1.panda
---
Expr(
    Int {
        n: 0,
    },
)
