src/snapshots/pandalang__parser__tests__parses@parens2.panda.snap
---
source: src/parser.rs
expression: source
input_file: src/snapshot_inputs/parens/parens2.panda
---
BinOp(
    BinOp {
        left: Var(
            Var {
                name: "a",
            },
        ),
        right: Var(
            Var {
                name: "b",
            },
        ),
        kind: Add,
    },
)
