src/snapshots/pandalang__parser__tests__parses@parens5.panda.snap
---
source: src/parser.rs
expression: source
input_file: src/snapshot_inputs/parens/parens5.panda
---
BinOp(
    BinOp {
        left: BinOp(
            BinOp {
                left: Var(
                    Var {
                        name: "a",
                    },
                ),
                right: BinOp(
                    BinOp {
                        left: Var(
                            Var {
                                name: "b",
                            },
                        ),
                        right: BinOp(
                            BinOp {
                                left: Var(
                                    Var {
                                        name: "c",
                                    },
                                ),
                                right: Var(
                                    Var {
                                        name: "d",
                                    },
                                ),
                                kind: Sub,
                            },
                        ),
                        kind: Mul,
                    },
                ),
                kind: Add,
            },
        ),
        right: Var(
            Var {
                name: "e",
            },
        ),
        kind: Div,
    },
)
