src/snapshots/pandalang__parser__tests__parses@prec1.panda.snap
---
source: src/parser.rs
expression: source
input_file: src/snapshot_inputs/bin_op/prec1.panda
---
Expr(
    BinOp {
        left: Expr(
            BinOp {
                left: Expr(
                    Var {
                        name: "a",
                    },
                ),
                right: Expr(
                    Var {
                        name: "b",
                    },
                ),
                kind: Add,
            },
        ),
        right: Expr(
            Var {
                name: "c",
            },
        ),
        kind: Sub,
    },
)
