src/snapshots/pandalang__parser__tests__parses@prec2.panda.snap
---
source: src/parser.rs
expression: source
input_file: src/snapshot_inputs/bin_op/prec2.panda
---
Expr(
    BinOp {
        left: Expr(
            BinOp {
                left: Expr(
                    Var {
                        name: "a",
                    },
                ),
                right: Expr(
                    Var {
                        name: "b",
                    },
                ),
                kind: Sub,
            },
        ),
        right: Expr(
            Var {
                name: "c",
            },
        ),
        kind: Add,
    },
)
