src/snapshots/pandalang__parser__tests__parses@prec3.panda.snap
---
source: src/parser.rs
expression: source
input_file: src/snapshot_inputs/bin_op/prec3.panda
---
BinOp(
    BinOp {
        left: BinOp(
            BinOp {
                left: Var(
                    Var {
                        name: "a",
                    },
                ),
                right: Var(
                    Var {
                        name: "b",
                    },
                ),
                kind: Mul,
            },
        ),
        right: Var(
            Var {
                name: "c",
            },
        ),
        kind: Div,
    },
)
