src/snapshots/pandalang__parser__tests__parses@prec4.panda.snap
---
source: src/parser.rs
expression: source
input_file: src/snapshot_inputs/bin_op/prec4.panda
---
Expr(
    BinOp {
        left: Expr(
            BinOp {
                left: Expr(
                    Var {
                        name: "a",
                    },
                ),
                right: Expr(
                    BinOp {
                        left: Expr(
                            Var {
                                name: "b",
                            },
                        ),
                        right: Expr(
                            Var {
                                name: "c",
                            },
                        ),
                        kind: Mul,
                    },
                ),
                kind: Add,
            },
        ),
        right: Expr(
            BinOp {
                left: Expr(
                    Var {
                        name: "d",
                    },
                ),
                right: Expr(
                    Var {
                        name: "e",
                    },
                ),
                kind: Div,
            },
        ),
        kind: Sub,
    },
)
