src/snapshots/pandalang__parser__tests__parses@prime.panda.snap
---
source: src/parser.rs
expression: source
input_file: src/snapshot_inputs/var/prime.panda
---
Expr(
    Var {
        name: "x'",
    },
)
